More files completed

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -4,10 +4,26 @@
 
     }
   }
+  &__links{
+    a{
+      text-decoration: none;
+    }
+  }
+
+  nav{
+    padding: 24px;
+  }
 
   &__menu{ // this is the mobile menu
     > span {
       display: block;
+      width: 26px;
+      height: 2px;
+      background-color: $DarkBlue;
+
+      &:not(:last-child){
+        margin-bottom: 3px;
+      }
     }
   }
 }
