--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -7,10 +7,17 @@ html{
   box-sizing: inherit;
 }
 
+
+a, a:visited, a:hover{
+  text-decoration: none;
+}
+
+
 body{
   margin: 0;
   padding: 0;
   font-family: 'public sans';
+  font-size: 18px;
   line-height: 1.3;
   
 }
