--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -17,10 +17,13 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'public sans';
-  font-size: 18px;
+  font-size: 1.125rem;
   line-height: 1.3;
+  color: $GrayishBlue;
   
 }
+
+
 
 .flex{
   display: flex;
@@ -33,5 +36,29 @@ body{
 
   &-ai-c{
     align-items: center;
+  }
+}
+
+//Global button styles
+
+button, .button{
+  padding: 1rem 1.875rem;
+  border-radius: 50px;
+  background-image: linear-gradient(to right,$LimeGreen, $BrightCyan);
+  cursor: pointer;
+  color: white;
+  border: none;
+}
+
+.hide-for-mobile{
+  //this hides for the tablet and mobile devices
+  @include breakpoint-down(medium){
+    display: none;
+  }
+}
+
+.hide-for-desktop{
+  @include breakpoint-up(large){
+    display: none;
   }
 }
